--- a/style.css
+++ b/style.css
@@ -107,9 +107,8 @@ nav {
 /*========GAMEBOARD=========*/
 /*==========================*/
 
-.full_container {
+.game_container {
     position: absolute;
-    /* top: 200%; */
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -119,7 +118,7 @@ nav {
     opacity: 0;
     transition: all 0.7s;
 }
-.full_container.active {
+.game_container.active {
     top: 50%;
     z-index: 1;
     opacity: 1;
@@ -285,7 +284,7 @@ nav {
     transition: all 0.7s;
     opacity: 1;
     transform: translateY(0);
-    z-index: 1000;
+    z-index: 100;
 }
 .menu_container.active {
     z-index: 0;
@@ -422,4 +421,122 @@ nav {
     color: var(--keyboard_col);
     background-color: var(--detail_col);
     width: 80%;
+}
+
+/*=====================*/
+/*========INFODESK=========*/
+/*=====================*/
+
+.info_container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    z-index: 0;
+    opacity: 0;
+    transition: all 0.3s;
+    background-color: rgba(35, 35, 35, 0.739);
+}
+
+.info_container.active {
+    z-index: 1000;
+    opacity: 1;
+}
+
+.info_desk {
+    max-width: 500px;
+    margin: 0 0 0 auto;
+    background-color: var(--keyboard_col);
+    padding: 1rem;
+    border-radius: 0.5rem;
+    opacity: 0;
+    transition: all 0.3s;
+    border-left: 1px solid var(--detail_col);
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
+    transform: translateX(100%);
+}
+.info_desk.active {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+.info_header {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+    align-items: center;
+}
+.info_header div {
+    display: flex;
+    flex-direction: column;
+    color: var(--detail_col);
+    width: 100%;
+    text-align: center;
+}
+.info_header div h2 {
+    font-size: 1rem;
+    color: #006a4f;
+}
+.info_header button {
+    background-color: #006a5000;
+    font-size: 1.25rem;
+    color: var(--detail_col);
+}
+
+.info_body {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    color: var(--detail_col);
+    padding: 0 1rem;
+}
+.info_body_principle h2 {
+    font-size: 1.25rem;
+    margin-bottom: 0.5rem;
+}
+.info_body_examples {
+    border-top: 1px solid var(--detail_col);
+    padding-top: 0.5rem;
+}
+.info_body_examples h3 {
+    font-size: 1.25rem;
+    margin-bottom: 0.5rem;
+}
+.info_body_examples ul {
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+}
+.info_body_examples ul li p strong {
+    color: #006a4f;
+    font-size: 18px;
+}
+.example_coumn {
+    display: flex;
+    gap: 2px;
+    margin-top: 0.25rem;
+}
+.example_coumn div {
+    width: 2.75rem;
+    height: 2.75rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid var(--detail_col);
+    background-color: var(--keyboard_col);
+    font-weight: 600;
+    font-size: 1.25rem;
+}
+
+.info_body_examples ul li:nth-child(1) .example_coumn div:nth-child(1) {
+    background-color: #58a351;
+}
+.info_body_examples ul li:nth-child(2) .example_coumn div:nth-child(2) {
+    background-color: #b59f3b;
+}
+.info_body_examples ul li:nth-child(3) .example_coumn div:nth-child(4) {
+    background-color: #404041;
 }
